k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: my-nodejs-route
  namespace: nataliia
spec:
  host: my-nodejs-eric.apps.ericbos3.cp.fyre.ibm.com
  port:
    targetPort: http-3001
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: my-nodejs-svc
    weight: 100
  wildcardPolicy: None
